[package]
name = "blueshift_escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = { version = "0.10.1", features = ["copy"] }
pinocchio-associated-token-account = "0.3.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
pinocchio-token-2022 = "0.2.0"
solana-address = { version = "2.0.0", features = ["curve25519"] }

thiserror = { version = "2.0", default-features = false }
num-traits = "0.2"
num-derive = "0.4"
